Fixed image add link input disappears issue (#5942)
* #5894:Image add link input disappear when start typing, fixed it by stopping event propagation


* Fix issues with suggestions not working in image block

The issue was that on mobile, the block toolbar has overflow auto so as to scroll horizontally. This hid the suggestions box in a weird scrollbar.

This PR tweaks that, so the suggestions don't show up on mobile at all. This is not an ideal fix, but suggestions weren't very mobile friendly in the first place.

Suggest we get this in now as a bandaid, and then look at addressing suggestions on mobile separately, for example using the same technique the block switcher uses.

* Fix issue with caption links

* Ignore typing in block toolbars

--- a/blocks/url-input/style.scss
+++ b/blocks/url-input/style.scss
@@ -42,6 +42,15 @@ $input-size: 230px;
 	width: $input-size + $icon-button-size * 2 + 2px; // add borders
 }
 
+// Hide suggestions on mobile until we @todo find a better way to show them
+.blocks-url-input__suggestions,
+.blocks-url-input .spinner {
+	display: none;
+	@include break-small() {
+		display: inherit;
+	}
+}
+
 .blocks-url-input__suggestion {
 	padding: 4px #{ $icon-button-size + $input-padding } 4px $input-padding;
 	color: $dark-gray-300; // lightest we can use for contrast
